--- a/for-Each.html
+++ b/for-Each.html
@@ -7,6 +7,41 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <h1>
+        Hola Mundo
+    </h1>
+    <div id="app"></div>
+    <script>
+        /* const products = [
+            {
+                title: 'burger',
+                price: 121
+            },
+            {
+                title: 'pizza',
+                price: 21
+            }
+        ];
+        const app = document.getElementById('app');
+        products.forEach(product => {
+            app.innerHTML += `<li>${product.title} - ${product.price}</li>`
+        }) */
+        const products = [
+            {
+                title: 'burger',
+                price: 121
+            },
+            {
+                title: 'pizza',
+                price: 21
+            }
+        ];
+        const app = document.getElementById('app');
+        const list =  products.map(product => {
+            return `<li>${product.title} - ${product.price}</li>`
+        }) 
+        app.innerHTML = list.join('');//join coje un array y le posiciona un string
+    </script>
+    <!-- <script src="./main.js"></script> -->
 </body>
 </html>
